@@ -1,5 +1,13 @@
 2012-10-03  Anders Carlsson  <andersca@apple.com>
 
+        Try to fix the Qt WebKit2 failures.
+
+        * WebProcess/WebPage/DrawingAreaImpl.cpp:
+        (WebKit::DrawingAreaImpl::DrawingAreaImpl):
+        Always force compositing if USE(COORDINATED_GRAPHICS) is true.
+
+2012-10-03  Anders Carlsson  <andersca@apple.com>
+
         Use the XPC service by default on newer systems
         https://bugs.webkit.org/show_bug.cgi?id=98297
         <rdar://problem/12424641>
